[package]
name = "brush-wasm"
description = "WebAssembly bindings for the brush shell interpreter"
version = "0.1.0"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
brush-core = { path = "../brush-core", default-features = false }
brush-builtins = { path = "../brush-builtins" }
brush-uutils = { path = "../brush-uutils" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tokio = { version = "1.49.0", features = ["rt", "sync", "macros", "io-util"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4.1", features = ["wasm_js"] }
uuid = { version = "1.20.0", features = ["js"] }
